"""
BUILD.bazel for @tummycrypt/tinyland-color-utils.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-color-utils && pnpm test
  Monorepo:   bazel build //packages/tinyland-color-utils/...

This is a pure JavaScript/TypeScript color utility package with zero
framework dependencies. Provides WCAG contrast validation, color space
conversions (hex, RGB, HSL, OKLCH, OKLAB), and LRU caching.
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================


# =============================================================================
# TypeScript compilation
#
# Pure utility package: no runtime dependencies.
# =============================================================================

ts_project(
    name = "tinyland_color_utils",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        "//:node_modules",
        "//packages:tsconfig_base",
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_color_utils",
    ],
    package = "@tummycrypt/tinyland-color-utils",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
# =============================================================================

ts_project(
    name = "tinyland_color_utils_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":tinyland_color_utils",
        "//:node_modules",
        "//:node_modules/vitest",
        "//:node_modules/fast-check",
        "//:node_modules/@fast-check/vitest",
    ],
)

js_test(
    name = "test",
    data = [
        ":tinyland_color_utils",
        ":tinyland_color_utils_test_lib",
        "//:node_modules",
        "//:node_modules/vitest",
        "//:node_modules/fast-check",
        "//:node_modules/@fast-check/vitest",
        "vitest.config.ts",
    ],
    entry_point = "//:vitest_bin",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck-only target (no emit)
# =============================================================================

ts_project(
    name = "typecheck",
    srcs = glob(["src/**/*.ts"]),
    declaration = False,
    no_emit = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        "//:node_modules",
        "//packages:tsconfig_base",
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
